Refactor user and skill management; update package structures, enhance user skill DTOs, and improve repository methods for better data handling and serialization.